Fixing spacing and alignment

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ h1 {
 
 .typedTitle {
   text-align: center;
-  display: inline-flex;
   font-family: 'Bad Script', cursive;
 }
 
